@@ -9,7 +9,12 @@
   \subsection{BUG FIXES}{
     \itemize{
       \item For \code{tiff(type = "windows")}, the labelling of per-page
-      graphs except the last was off by one.      
+      graphs except the last was off by one.
+
+      \item Loading package \pkg{stats} (which is done for a default
+      session) would switch line endings on \file{stdout} and
+      \code{stdout} from CRLF to LF.  This affected \command{Rterm} and
+      \command{R CMD BATCH}.
     }
   }
 }
